Change flow a bit